--- a/src/app/features/execution/execution.html
+++ b/src/app/features/execution/execution.html
@@ -18,8 +18,8 @@
             </mat-card-header>
             <mat-card-content>
                 <div class="chart-wrapper">
-                    <ngx-charts-bar-vertical [view]="view" [scheme]="colorScheme" [results]="chartData[item.id]"
-                        [gradient]="gradient" [xAxis]="showXAxis" [yAxis]="showYAxis" [showXAxisLabel]="showXAxisLabel"
+                    <ngx-charts-bar-vertical [scheme]="colorScheme" [results]="chartData[item.id]" [gradient]="gradient"
+                        [xAxis]="showXAxis" [yAxis]="showYAxis" [showXAxisLabel]="showXAxisLabel"
                         [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel"
                         [yAxisTicks]="yAxisTicks">
                     </ngx-charts-bar-vertical>
