feat: Implement per-item Y-axis ticks for voting charts by replacing a single array with a map and updating the template to use a new getter.

--- a/src/app/features/execution/execution.html
+++ b/src/app/features/execution/execution.html
@@ -21,7 +21,7 @@
                     <ngx-charts-bar-vertical [scheme]="colorScheme" [results]="chartData[item.id]" [gradient]="gradient"
                         [xAxis]="showXAxis" [yAxis]="showYAxis" [showXAxisLabel]="showXAxisLabel"
                         [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel"
-                        [yAxisTicks]="yAxisTicks">
+                        [yAxisTicks]="getYAxisTicks(item.id)">
                     </ngx-charts-bar-vertical>
                 </div>
             </mat-card-content>
